Add household member details and re design household profile

--- a/AUF.EMR.MVC/Views/PregnancyAppointment/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyAppointment/Details.cshtml
@@ -6,147 +6,158 @@
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
-<div class="container mx-auto py-8">
+<div class="container mx-auto py-8 px-4">
 
     <div class="bg-white shadow-md rounded-lg p-8 mb-8">
-
-        <h1 class="text-xl font-bold text-gray-800 mb-4">Pregnancy Appointment Details</h1>
+        <div class="flex justify-between">
+            <div>
+                <h1 class="text-xl">Details</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Pregnancy Appointment</h1>
+            </div>
+            <a asp-action="Edit" asp-route-id="@Model?.PregnancyAppointment.Id" asp-route-requestUrl="@Model.RequestUrl" asp-route-householdNo="@Model.HouseholdNo" class="text-white bg-primary-50 mb-1 font-medium rounded-lg transition duration-300 ease-in-out text-sm px-4 py-2 flex-shrink-0 inline-flex items-center space-x-2 max-h-10 text-white font-medium" aria-label="Add WRA">
+                <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd"></path>
+                    <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd"></path>
+                </svg><span>Update</span>
+            </a>
+        </div>
 
         <div class="text-gray-800">
-            <h4>PregnancyAppointment</h4>
             <hr class="mb-4" />
-            <dl class="grid grid-cols-1 gap-y-4 gap-x-8">
+            <dl class="grid grid-cols-2 gap-y-4 gap-x-8">
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    Patient
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.PregnancyRecord.Patient.FullName)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        Patient
+                    </dt>
+
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.PregnancyRecord.Patient.FullName)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    Date
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.Date)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        FHT
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.FHT)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    Weight
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.Weight)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        Date
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.Date)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    Blood Pressure
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.BloodPressure)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        TT1
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.TT1)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    Temperature
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.Temperature)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        Weight
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.Weight)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    AOG
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.AOG)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        TT2
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.TT2)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    FH
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.FH)
-                </dd>
-                </div>
-                
-                <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    FHT
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.FHT)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        Blood Pressure
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.BloodPressure)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    TT1
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.TT1)
-                </dd>
-                </div>
-                
-                <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    TT2
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.TT2)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        TT3
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.TT3)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    TT3
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.TT3)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        Temperature
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.Temperature)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    TT4
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.TT4)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        TT4
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.TT4)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    TT5
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.TT5)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        AOG
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.AOG)
+                    </dd>
+                </div>
+
+                <div></div>
+
+                <div class="flex items-center">
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        FH
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.FH)
+                    </dd>
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
-                    Remarks
-                </dt>
-                <dd class="text-gray-900">
-                    @Html.DisplayFor(model => model.PregnancyAppointment.Remarks)
-                </dd>
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        TT5
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.TT5)
+                    </dd>
+                </div>
+
+                <div class="flex items-center">
+                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                        Remarks
+                    </dt>
+                    <dd class="text-gray-900">
+                        @Html.DisplayFor(model => model.PregnancyAppointment.Remarks)
+                    </dd>
                 </div>
 
             </dl>
         </div>
-        <div class="flex justify-end mt-8">
-            <a asp-action="Edit" asp-route-id="@Model?.PregnancyAppointment.Id" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
-            <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back to List</a>
-        </div>
+    </div>
+    <div class="flex justify-end mt-8">
+        <a asp-action="Details" asp-controller="PregnancyRecord" asp-route-id="@Model.PregnancyAppointment.PregnancyRecordId" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back to List</a>
     </div>
 </div>
