--- a/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
@@ -153,8 +153,8 @@
                         </th>
                         <th class="px-4 py-2 text-left">
                             1st Tri Check-Up
-                        </th class="px-4 py-2 text-left">
-                        <th>
+                        </th>
+                        <th class="px-4 py-2 text-left">
                             2nd Tri Check-Up
                         </th>
                         <th class="px-4 py-2 text-left">
