--- a/AUF.EMR.MVC/Views/HouseHoldMember/Details.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Details.cshtml
@@ -1,121 +1,109 @@
-﻿@using AUF.EMR.MVC.Models.DetailVM;
-@model DetailHouseholdMemberVM
+﻿@model DetailHouseholdMemberVM
 
 @{
-    ViewData["Title"] = "Details";
+    Layout = "Layouts/_MasterlistLayout";
+    ViewData["Title"] = "Household Member Details";
+    ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
-<h1>Details</h1>
+<div class="container mx-auto py-8 px-4">
 
-<div>
-    <h4>HouseholdMember</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.LastName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.LastName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.FirstName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.MotherMaidenName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.MotherMaidenName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.RelationshipToHouseholdHead)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.RelationshipToHouseholdHead)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.OtherRelation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.OtherRelation)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.Sex)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.Sex)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.Age)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.Age)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.Birthday)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.Birthday)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.FirstQtrClassification)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.FirstQtrClassification)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.SecondQtrClassification)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.SecondQtrClassification)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.ThirdQtrClassification)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.ThirdQtrClassification)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.FourthQtrClassification)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.FourthQtrClassification)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.Remarks)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.Remarks)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.NameOfMother)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.NameOfMother)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.NameOfFather)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.NameOfFather)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.IsNhts)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.IsNhts)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HouseholdMember.IsInSchool)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HouseholdMember.IsInSchool)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.HouseholdMember.Id">Edit</a> |
-    <a href="@Model.RequestUrl">Back to List</a>
+    <div class="bg-white shadow-md rounded-lg p-8 mb-8">
+        <div class="flex justify-between">
+            <div>
+                <h1 class="text-xl">Details</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Household Member</h1>
+            </div>
+            <div class="flex justify-end mb-6 gap-3">
+                <a asp-action="Edit" asp-controller="HouseholdMember" asp-route-requestUrl="@Model.RequestUrl" asp-route-id="@Model.HouseholdMember.Id" asp-route-householdNo="@Model.HouseholdNo" class="px-5 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 max-h-10 focus:outline-none focus:ring-green-200">
+                    <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
+                        <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd" />
+                    </svg>
+                    Update
+                </a>
+                <button data-modal-target="popup-modal-2" data-member-id="@Model.HouseholdMember.Id" data-modal-toggle="popup-modal-2" class="delete-btn px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-danger-50 rounded-lg focus:ring-4 max-h-10 focus:outline-none focus:ring-red-100" type="button">
+                    <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd" />
+                    </svg>
+                    <span class="hidden md:inline font-medium">&nbsp; Delete</span>
+                </button>
+            </div>
+        </div>
+
+        <div class="text-gray-800 text-sm">
+            <hr class="mb-8" />
+
+            <dl class="grid grid-cols-1 gap-y-4 gap-x-8">
+                <div class="flex items-center">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">Name</dt>
+                    <dd class="text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.FullName)</dd>
+                </div>
+                <div class="flex items-center">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">Relationship to HH Head</dt>
+                    <dd class="text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.RelationshipToHouseholdHead)</dd>
+                </div>
+                <div class="flex items-center">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">Sex</dt>
+                    <dd class="text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.Sex)</dd>
+                </div>
+                <div class="flex items-center">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">Age</dt>
+                    <dd class="text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.Age)</dd>
+                </div>
+                <div class="flex items-center">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">Date of Birth</dt>
+                    <dd class="text-gray-900">@Html.DisplayFor(model => model.HouseholdMember.Birthday)</dd>
+                </div>
+                                <div class="flex items-center">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">SE Status</dt>
+                    <dd class="text-gray-900">@((Model.HouseholdMember.IsNhts) ? "NHTS" : "Non-NHTS")</dd>
+                </div>
+                <h5 class="">Age/Health Risk Group Classification</h5>
+                <div class="flex items-start">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">First Quarter</dt>
+                    <dd class="text-gray-900">
+                        @foreach (var classification in Model.FirstClassificationList)
+                        {
+                            <p>@classification </p>
+                        }
+                    </dd>
+                </div>
+                <div class="flex items-start">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">Second Quarter</dt>
+                    <dd class="text-gray-900">
+                        @foreach (var classification in Model.SecondClassificationList)
+                        {
+                            <p>@classification </p>
+                        }
+                    </dd>
+                </div>
+                <div class="flex items-start">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">Third Quarter</dt>
+                    <dd class="text-gray-900">
+                        @foreach (var classification in Model.ThirdClassificationList)
+                        {
+                            <p>@classification </p>
+                        }
+                    </dd>
+                </div>
+                <div class="flex items-start">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">Fourth Quarter</dt>
+                    <dd class="text-gray-900">
+                        @foreach (var classification in Model.FourthClassificationList)
+                        {
+                            <p>@classification </p>
+                        }
+                    </dd>
+                </div>
+                <div class="flex items-center">
+                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">Remarks</dt>
+                    <dd class="text-gray-900">@Model.HouseholdMember.Remarks</dd>
+                </div>
+            </dl>
+        </div>
+    </div>
+    <div class="flex justify-end mt-8">
+        <a asp-action="HouseholdProfile" asp-controller="Household" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-3 me-2 mb-2">Back to List</a>
+    </div>
 </div>
