--- a/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
@@ -202,7 +202,7 @@
                                 </a>
                                 
                                 <a asp-action="Edit" asp-controller="VaccinationAppointment"
-                                   asp-route-id="@appointment.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-yellow-300 hover:text-yellow-400 mr-2">
+                                   asp-route-id="@appointment.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="text-yellow-300 hover:text-yellow-400 mr-2">
                                    <i class="fas fa-edit"></i>
                                </a>
 
