--- a/AUF.EMR.MVC/Views/PregnancyAppointment/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyAppointment/Edit.cshtml
@@ -14,7 +14,10 @@
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             <input type="hidden" asp-for="RequestUrl" value="@Model.RequestUrl" />
             <input type="hidden" asp-for="PregnancyAppointment.PregnancyRecordId" value="@Model.PregnancyAppointment.PregnancyRecordId" />
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Pregnancy Appointment</h1>
+            <div>
+                <h1 class="text-xl">Edit</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Pregnancy Appointment</h1>
+            </div>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
@@ -88,7 +91,7 @@
                 </div>
             </div>
             <div class="flex justify-end">
-                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
+                <a href="@Model.RequestUrl" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
                 <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Add</button>
             </div>
         </form>
