--- a/AUF.EMR.MVC/Views/PregnancyAppointment/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyAppointment/Details.cshtml
@@ -22,7 +22,7 @@
             </a>
         </div>
 
-        <div class="text-gray-800">
+        <div class="text-gray-800 text-sm">
             <hr class="mb-4" />
             <dl class="grid grid-cols-2 gap-y-4 gap-x-8">
                 <div class="flex items-center">
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="flex items-center">
-                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                    <dt class="flex-shrink-0 mr-10 w-22 text-gray-800 font-semibold">
                         FHT
                     </dt>
                     <dd class="text-gray-900">
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="flex items-center">
-                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                    <dt class="flex-shrink-0 mr-10 w-22 text-gray-800 font-semibold">
                         TT1
                     </dt>
                     <dd class="text-gray-900">
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="flex items-center">
-                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                    <dt class="flex-shrink-0 mr-10 w-22 text-gray-800 font-semibold">
                         TT2
                     </dt>
                     <dd class="text-gray-900">
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="flex items-center">
-                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                    <dt class="flex-shrink-0 mr-10 w-22 text-gray-800 font-semibold">
                         TT3
                     </dt>
                     <dd class="text-gray-900">
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="flex items-center">
-                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                    <dt class="flex-shrink-0 mr-10 w-22 text-gray-800 font-semibold">
                         TT4
                     </dt>
                     <dd class="text-gray-900">
@@ -137,7 +137,7 @@
                 </div>
 
                 <div class="flex items-center">
-                    <dt class="flex-shrink-0 mr-10 w-32 text-gray-800 font-semibold">
+                    <dt class="flex-shrink-0 mr-10 w-22 text-gray-800 font-semibold">
                         TT5
                     </dt>
                     <dd class="text-gray-900">
