--- a/AUF.EMR.MVC/Views/VaccinationAppointment/Details.cshtml
+++ b/AUF.EMR.MVC/Views/VaccinationAppointment/Details.cshtml
@@ -21,13 +21,13 @@
                     </svg><span>Update</span>
             </a>
         </div>
-        <div class="text-gray-800">
+        <div class="text-gray-800 text-sm">
             <hr class="mb-4" />
 
             <dl class="grid grid-cols-1 gap-y-4 gap-x-8">
 
                 <div class="flex items-center">
-                    <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
+                    <dt class="flex-shrink-0 mr-10 w-40 text-gray-800 font-semibold">
                     Patient
                 </dt>
                     <dd class="text-gray-900">
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
+                <dt class="flex-shrink-0 mr-10 w-40 text-gray-800 font-semibold">
                     Vaccination Date
                 </dt>
                 <dd class="text-gray-900">
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
+                <dt class="flex-shrink-0 mr-10 w-40 text-gray-800 font-semibold">
                     Weight
                 </dt>
                 <dd class="text-gray-900">
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
+                <dt class="flex-shrink-0 mr-10 w-40 text-gray-800 font-semibold">
                     Height
                 </dt>
                 <dd class="text-gray-900">
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="flex items-center">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
+                <dt class="flex-shrink-0 mr-10 w-40 text-gray-800 font-semibold">
                     Temperature
                 </dt>
                 <dd class="text-gray-900">
@@ -74,7 +74,7 @@
                 <hr class="mb-4" />
 
                 <div class="flex items-justify">
-                <dt class="flex-shrink-0 mr-10 w-52 text-gray-800 font-semibold">
+                <dt class="flex-shrink-0 mr-10 w-40 text-gray-800 font-semibold">
                     Vaccines
                 </dt>
                 <dd class="text-gray-900">
