--- a/AUF.EMR.MVC/Views/Masterlist/ChildDetails.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/ChildDetails.cshtml
@@ -31,7 +31,7 @@
             </div>
         </div>
 
-        <div class="text-gray-800">
+        <div class="text-gray-800 text-sm">
             <hr class="mb-8" />
 
             <dl class="grid grid-cols-1 gap-y-4 gap-x-8">
