--- a/AUF.EMR.MVC/Views/WRA/Details.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Details.cshtml
@@ -59,7 +59,7 @@
 
         <div>
             <hr class="mb-2" />
-            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-4 gap-x-8 py-5">
+            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-4 gap-x-8 py-5 text-sm">
                 <div class="flex items-center">
                     <dt class="text-gray-700 font-semibold mr-10 flex-shrink-0 w-40">Full Name</dt>
                     <dd class="text-gray-900">@Model.WRA.HouseholdMember.FullName</dd>
